crates/nuzo-class-macros/tests/ui/getter_skip_all.stderr
error: #[class_impl(serialize)] requires at least one non-skipped #[get] method
 --> tests/ui/getter_skip_all.rs:7:1
  |
7 | #[class_impl(serialize)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `class_impl` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `get`
 --> tests/ui/getter_skip_all.rs:1:37
  |
1 | use nuzo_class_macros::{class_impl, get};
  |                                     ^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
